--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,12 +8,27 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Microposts</a>
+        <a class="navbar-brand" href="/">Workrec</a>
       </div>
+
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Signup</a></li>
-          <li><a href="#">Login</a></li>
+          <% if logged_in? %>
+            <li><a href="#">Projects</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <%= current_user.name %> <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'My page', user_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to 'Logout', logout_path(current_user) %></li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to 'Signup', signup_path %></li>
+            <li><%= link_to 'Login', login_path %></li>
+          <% end %>
         </ul>
       </div>
     </div>
