Add projects list

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Projects#show</h1>
-<p>Find me in app/views/projects/show.html.erb</p>
+<div class="text-center">
+  <h1><%= @project.name%></h1>
+</div>
+<div class="row">
+  <aside class="col-xs-4">
+    <h3>メンバー一覧</h3>
+    
+    <%= render 'member', members: @members %>
+  </aside>
+  <div class="col-xs-8">
+  </div>
+</div>
