--- a/app/views/users/_projects.html.erb
+++ b/app/views/users/_projects.html.erb
@@ -1,7 +1,7 @@
 <% works.each do |work| %>
   <div class="panel panel-default">
   <div class="panel-heading">
-    <%= link_to work.project.name, project_path(work.get_project), class: "h4" %>
+    <%= link_to work.project.name, project_path(work.project), class: "h4" %>
   </div>
   <div class="panel-body">
     <%= form_for(work, html: {method: :delete }) do |f| %>
@@ -9,9 +9,5 @@
       <%= hidden_field_tag :project_id, work.project_id %>
       <%= f.submit 'Leave', class: 'btn btn-danger' %>
     <% end %>
-    
-    
   </div>
-  
-  
 <% end %>
