--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Projects#new</h1>
-<p>Find me in app/views/projects/new.html.erb</p>
+<div class="text-center">
+  <h1>New Project</h1>
+</div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@project) do |f| %>
+      
+      <div class="form-group">
+        
+        <%= f.label :name, 'Project Name' %>
+        <%= f.text_field :name, class: 'form-control' %>
+        
+      </div>
+      <%= f.submit 'Launch new project', class: 'btn btn-primary btn-block' %>
+    <% end %>
+  </div>
+</div>
