--- a/app/views/projects/_action.html.erb
+++ b/app/views/projects/_action.html.erb
@@ -1,4 +1,6 @@
-<% if current_user.is_member?(project) %>
+<% if current_user.is_founder?(project) %>
+  <%= link_to "Delete this project", project, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-default btn-danger  btn-block' %>
+<% elsif current_user.is_member?(project) %>
   <%= form_for(current_user.works.find_by(project_id: project.id), html: {method: :delete }) do |f| %>
     <%= hidden_field_tag :user_id, current_user.id %>
     <%= hidden_field_tag :project_id, project.id %>
