--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h1><%= @project.name%></h1>
+  <h1>#<%= @project.id%> &emsp; <%= @project.name%></h1>
 </div>
 <div class="row">
   <aside class="col-xs-4">
